--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="header-img">
           <img class="header_img"
-            src="/images/new_girl_header_img.svg"
+            src="/images/Group 192 (1).svg"
             alt="img not found">
         </div>
       </div>
