wednesday second time

--- a/index.html
+++ b/index.html
@@ -83,8 +83,11 @@
         </div>
 
         <div class="header-img">
+          <!-- <div class="header-main-img">
+
+          </div> -->
           <img class="header_img"
-            src="/images/Group 192 (1).svg"
+            src="/images/only_girl_img.svg"
             alt="img not found">
         </div>
       </div>
@@ -92,7 +95,7 @@
     <!-- main body start -->
     <div class="main">
 
-      <div class="main-why">
+      <!-- <div class="main-why">
         <div class="main-why_heading_para">
           <div class="main-why_heading">
             <h1 class="heading_s">
@@ -114,7 +117,7 @@
 
         <div class="main-why-cards">
           <!-- card 1 -->
-          <div class="main-why-card-custom align-card card">
+      <!-- <div class="main-why-card-custom align-card card">
             <div class="card-custom_icon">
               <img src="./images/customIcon.svg" alt="not
                 found">
@@ -136,9 +139,9 @@
             </div>
 
 
-          </div>
-          <!-- card 2 -->
-          <div class="main-why-card-setup align-card card">
+          </div> -->
+      <!-- card 2 -->
+      <!-- <div class="main-why-card-setup align-card card">
             <div class="card-custom_icon card-setup_color">
               <img src="./images/setup.svg" alt="not
                 found">
@@ -158,9 +161,9 @@
               </p>
             </div>
 
-          </div>
-          <!-- card 3 -->
-          <div class="main-why-card-secure card">
+          </div> -->
+      <!-- card 3 -->
+      <!-- <div class="main-why-card-secure card">
             <div class="card-custom_icon card-secure_color">
               <img src="./images/secure.svg" alt="not
                 found">
@@ -182,8 +185,7 @@
             </div>
           </div>
         </div>
-      </div>
-
+      </div> -->
       <!-- main role  -->
       <div class="main-role">
         <div class="main-role-heading">
@@ -201,7 +203,7 @@
 
           <div class="main-role-manage-container">
             <div class="main-role-manage-own-content">
-              <div>
+              <div class="main-role-manage-own">
                 <!-- own -->
                 <div class="role-own">
                   <div class="role-own_icon active_i">
@@ -251,7 +253,7 @@
               </div>
               <!-- rule text  -->
 
-              <div>
+              <div class="main-role-manage-content">
 
                 <div class="role-content">
                   <div class="role-content-icon">
@@ -347,9 +349,12 @@
                   </div>
 
                 </div>
-                <button class="role_learn_more">Learn More</button>
+
               </div>
 
+            </div>
+            <div class="learn-more">
+              <button class="role_learn_more">Learn More</button>
             </div>
 
           </div>
@@ -366,7 +371,7 @@
 
           <div class="main-role-manage-container">
             <div class="main-role-manage-own-content">
-              <div>
+              <div class="main-role-manage-own">
                 <!-- own -->
                 <div class="role-own">
                   <div class="role-own_icon active_i">
@@ -416,9 +421,7 @@
               </div>
               <!-- rule text  -->
 
-              <div>
-
-
+              <div class="main-role-manage-content">
                 <div class="role-content">
                   <div class="role-content-icon">
                     <img src="images/arrow-right.svg"
@@ -496,7 +499,7 @@
 
           <div class="main-role-manage-container">
             <div class="main-role-manage-own-content">
-              <div>
+              <div class="main-role-manage-own">
                 <!-- own -->
                 <div class="role-own">
                   <div class="role-own_icon active_i">
@@ -546,9 +549,7 @@
               </div>
               <!-- rule text  -->
 
-              <div>
-
-
+              <div class="main-role-manage-content">
                 <div class="role-content">
                   <div class="role-content-icon">
                     <img src="images/arrow-right.svg"
@@ -686,7 +687,7 @@
       </div>
       <!-- trusted by  -->
 
-      <div class="main-trusted">
+      <!-- <div class="main-trusted">
 
         <div class="main-trusted-heading">
           <h1 class="heading_s">
@@ -729,9 +730,9 @@
             <button class="btn_l">Request a Demo</button>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
-
+    <!-- 
     <div class="footer">
       <div class="footer-container">
 
@@ -762,10 +763,10 @@
           </div>
 
         </div>
-        <!-- footer  -->
+
         <div class="footer-info">
           <div class="footer-infos product">
-            <!-- above in nav link have li element -->
+
             <ul class="footer-infos_ul">
               <li><h4 class="footer-infos_heading">PRODUCTS</h4></li>
               <li>School Owner</li>
@@ -811,7 +812,6 @@
       <div class="footer-copyright">
         <p class="para_med">&copy; 2022 MyQampus </p>
       </div>
-    </div>
-
+    </div> -->
   </body>
 </html>
