--- a/index.html
+++ b/index.html
@@ -347,19 +347,173 @@
                       Integer.
                     </p>
                   </div>
+                </div>
+                <button class="role_learn_more">Learn More</button>
+              </div>
+            </div>
+          </div>
+        </div>
 
+
+        <!-- lesson planner -->
+
+        <div class="main-role-manage">
+          <div class="main-role-manage-heading">
+            <h1 class="role_heading right-heading">
+              2. <span class="role_span">Lesson</span> Planner
+            </h1>
+          </div>
+
+          <div class="main-role-manage-container">
+            <div class="main-role-manage-own-content reverse-row">
+              <div class="main-role-manage-own">
+                <!-- own -->
+                <div class="role-own">
+                  <div class="role-own_icon active_i">
+                    <img src="images/rule_own.svg" alt="not
+                      found">
+                    <!-- <svg src="images/rule_own.svg"
+                                            style="margin-top: 10px;"></svg> -->
+                  </div>
+                  <div class="role-own_name">
+                    <h4 class="name_heading">School Owner</h4>
+                  </div>
+                </div>
+                <!-- teacher -->
+                <div class="role-own">
+                  <div class="role-own_icon">
+                    <img src="images/rule_teacher.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-own_name">
+                    <h4 class="name_heading">Teacher</h4>
+                  </div>
+                </div>
+                <!-- parents -->
+                <div class="role-own">
+                  <div class="role-own_icon">
+                    <img src="images/rule_parent.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-own_name">
+                    <h4 class="name_heading">Parents</h4>
+                  </div>
+                </div>
+                <!-- student -->
+                <div class="role-own">
+                  <div class="role-own_icon">
+                    <img src="images/rule_student.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-own_name">
+                    <h4 class="name_heading">Students</h4>
+                  </div>
                 </div>
 
               </div>
+              <!-- rule text  -->
 
-            </div>
-            <div class="learn-more">
-              <button class="role_learn_more">Learn More</button>
-            </div>
+              <div class="main-role-manage-content">
 
+                <div class="role-content">
+                  <div class="role-content-icon">
+                    <img src="images/arrow-right.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-content-text">
+                    <p class="para_b">
+                      Lorem ipsum dolor sit amet,
+                      consectetur
+                      adipiscing elit. Egestas
+
+                    </p>
+                  </div>
+                </div>
+
+                <div class="role-content">
+                  <div class="role-content-icon">
+                    <img src="images/arrow-right.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-content-text">
+                    <p class="para_b">
+                      Lorem ipsum dolor sit amet,
+                      consectetur
+                      adipiscing elit. Egestas orci
+                      viverra
+                      arcu, purus dictum ac dictumst in
+                      quis.
+                      Integer.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="role-content">
+                  <div class="role-content-icon">
+                    <img src="images/arrow-right.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-content-text">
+                    <p class="para_b">
+                      Lorem ipsum dolor sit amet,
+                      consectetur
+                      adipiscing elit. Egestas orci
+                      viverra
+                      arcu, purus dictum ac dictumst in
+                      quis.
+                      Integer.
+                    </p>
+                  </div>
+                </div>
+                <div class="role-content">
+                  <div class="role-content-icon">
+                    <img src="images/arrow-right.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-content-text">
+                    <p class="para_b">
+                      Lorem ipsum dolor sit amet,
+                      consectetur
+                      adipiscing elit. Egestas orci
+                      viverra
+                      arcu, purus dictum ac dictumst in
+                      quis.
+                      Integer.
+                    </p>
+                  </div>
+                </div>
+                <div class="role-content">
+                  <div class="role-content-icon">
+                    <img src="images/arrow-right.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-content-text">
+                    <p class="para_b">
+                      Lorem ipsum dolor sit amet,
+                      consectetur
+                      adipiscing elit. Egestas orci
+                      viverra
+                      arcu, purus dictum ac dictumst in
+                      quis.
+                      Integer.
+                    </p>
+                  </div>
+                </div>
+                <button class="role_learn_more">Learn More</button>
+              </div>
+            </div>
           </div>
-
         </div>
+
+
         <!-- fee management -->
         <div class="main-role-manage">
           <div class="main-role-manage-heading">
@@ -371,6 +525,141 @@
 
           <div class="main-role-manage-container">
             <div class="main-role-manage-own-content">
+              <div class="main-role-manage-own">
+                <!-- own -->
+                <div class="role-own">
+                  <div class="role-own_icon active_i">
+                    <img src="images/rule_own.svg" alt="not
+                      found">
+                    <!-- <svg src="images/rule_own.svg"
+                                            style="margin-top: 10px;"></svg> -->
+                  </div>
+                  <div class="role-own_name">
+                    <h4 class="name_heading">School Owner</h4>
+                  </div>
+                </div>
+                <!-- teacher -->
+                <div class="role-own">
+                  <div class="role-own_icon">
+                    <img src="images/rule_teacher.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-own_name">
+                    <h4 class="name_heading">Teacher</h4>
+                  </div>
+                </div>
+                <!-- parents -->
+                <div class="role-own">
+                  <div class="role-own_icon">
+                    <img src="images/rule_parent.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-own_name">
+                    <h4 class="name_heading">Parents</h4>
+                  </div>
+                </div>
+                <!-- student -->
+                <div class="role-own">
+                  <div class="role-own_icon">
+                    <img src="images/rule_student.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-own_name">
+                    <h4 class="name_heading">Students</h4>
+                  </div>
+                </div>
+
+              </div>
+              <!-- rule text  -->
+
+              <div class="main-role-manage-content">
+                <div class="role-content">
+                  <div class="role-content-icon">
+                    <img src="images/arrow-right.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-content-text">
+                    <p class="para_b">
+                      Lorem ipsum dolor sit amet,
+                      consectetur
+                      adipiscing elit. Egestas orci
+                      viverra
+                      arcu, purus dictum ac dictumst in
+                      quis.
+                      Integer.
+
+                    </p>
+                  </div>
+                </div>
+
+                <div class="role-content">
+                  <div class="role-content-icon">
+                    <img src="images/arrow-right.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-content-text">
+                    <p class="para_b">
+                      Lorem ipsum dolor sit amet,
+                      consectetur
+                      adipiscing elit. Egestas
+                    </p>
+                  </div>
+                </div>
+
+                <div class="role-content">
+                  <div class="role-content-icon">
+                    <img src="images/arrow-right.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-content-text">
+                    <p class="para_b">
+                      Lorem ipsum dolor sit amet,
+                      consectetur
+                      adipiscing elit. Egestas
+                    </p>
+                  </div>
+                </div>
+
+                <div class="role-content">
+                  <div class="role-content-icon">
+                    <img src="images/arrow-right.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-content-text">
+                    <p class="para_b">
+                      Lorem ipsum dolor sit amet,
+                      consectetur
+                      adipiscing elit. Egestas orci
+                      viverra
+                      arcu, purus dictum ac dictumst
+
+                    </p>
+                  </div>
+                </div>
+
+                <button class="role_learn_more">Learn More</button>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <!-- event management -->
+        <div class="main-role-manage">
+          <div class="main-role-manage-heading">
+            <h1 class="role_heading right-heading">
+              4. <span class="role_span">Event</span> Management
+            </h1>
+          </div>
+
+          <div class="main-role-manage-container">
+            <div class="main-role-manage-own-content reverse-row">
               <div class="main-role-manage-own">
                 <!-- own -->
                 <div class="role-own">
@@ -471,22 +760,53 @@
                     <p class="para_b">
                       Lorem ipsum dolor sit amet,
                       consectetur
-                      adipiscing elit. Egestas orci
+                      adipiscing elit. Egestasqui orci
                       viverra
                       arcu, purus dictum ac dictumst in
                       quis.
-                      Integer.
                     </p>
                   </div>
                 </div>
-
-
+                <div class="role-content">
+                  <div class="role-content-icon">
+                    <img src="images/arrow-right.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-content-text">
+                    <p class="para_b">
+                      Lorem ipsum dolor sit amet,
+                      consectetur
+                      adipiscing elit. Egestas orci
+                      viverra
+                      arcu, purus dictum ac
+                    </p>
+                  </div>
+                </div>
+                <div class="role-content">
+                  <div class="role-content-icon">
+                    <img src="images/arrow-right.svg"
+                      alt="not
+                      found">
+                  </div>
+                  <div class="role-content-text">
+                    <p class="para_b">
+                      Lorem ipsum dolor sit amet,
+                      consectetur
+                      adipiscing elit. Egestas orci
+                      viverra
+                      arcu, purus dictum ac dictumst in
+                      qui.
+                    </p>
+                  </div>
+                </div>
                 <button class="role_learn_more">Learn More</button>
               </div>
             </div>
           </div>
 
         </div>
+
         <!-- Exam planner -->
 
         <div class="main-role-manage">
@@ -660,24 +980,26 @@
               elit. Egestas orci viverra arcu, purus dictum.</p>
           </div>
 
-          <div class="main-users-stat">
+          <div class="main-users-vb">
+          </div>
 
-            <div class="institutes-stat-num-para stat-margin">
-              <h1 class="users-stat-num">
+          <div class="main-users-stat">
+            <div class="users-stat">
+              <h1 class="users-stat-num inst_col">
                 250
               </h1>
               <p class="para_bb">Institutes</p>
             </div>
 
-            <div class="Students-stat-num-para stat-margin">
-              <h1 class="users-stat-num">
+            <div class="users-stat">
+              <h1 class="users-stat-num stu_col">
                 70<span>k</span>
               </h1>
               <p class="para_bb">Students</p>
             </div>
 
-            <div class="Countries-stat-num-para stat-margin">
-              <h1 class="users-stat-num">
+            <div class="users-stat">
+              <h1 class="users-stat-num ctry_col">
                 15
               </h1>
               <p class="para_bb">Countries</p>
@@ -687,8 +1009,7 @@
       </div>
       <!-- trusted by  -->
 
-      <!-- <div class="main-trusted">
-
+      <div class="main-trusted">
         <div class="main-trusted-heading">
           <h1 class="heading_s">
             Trusted by 5,000+ School Worldwide
@@ -712,9 +1033,16 @@
               alt="not found"></a>
           <a href="https://netflix.com/">
             <img src="images/netflix.svg" alt="not found"></a>
-          <img src="images/airbnb.svg" alt="not found">
-          <img src="images/amazon.svg" alt="not found">
-          <img src="images/grab_logo.svg" alt="not found">
+
+          <a href="https://www.airbnb.com/"> <img src="images/airbnb.svg"
+              alt="not found"></a>
+
+          <a href="https://www.amazon.com/">
+            <img src="images/amazon.svg" alt="not found">
+          </a>
+          <a href="https://www.grab.com/sg/">
+            <img src="images/grab_logo.svg" alt="not found">
+          </a>
         </div>
 
         <div class="main-users-info-stat main-trusted-ready">
@@ -730,7 +1058,7 @@
             <button class="btn_l">Request a Demo</button>
           </div>
         </div>
-      </div> -->
+      </div>
     </div>
     <!-- 
     <div class="footer">
