--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet">
 
     <!-- <link
@@ -19,10 +19,8 @@
   </head>
   <body>
     <div class="container">
-
       <div class="navbar-container">
         <div class="navbar">
-
           <div class="logo">
             <a href="#">
               <img class="log_img" src="./images/logo.svg"
@@ -32,20 +30,52 @@
           </div>
 
           <div class="nav">
+            <div class="nav-link">
+              <ul class="nav-link_items">
+                <li><a class="nav-link_item" href="#"
+                    class="link_items">Features</a></li>
+                <li><a class="nav-link_item" href="#"
+                    class="link_items">Owner
+                  </a></li>
+                <li><a class="nav-link_item" href="#"
+                    class="link_items">Teacher</a></li>
+                <li><a class="nav-link_item" href="#"
+                    class="link_items">Parent</a></li>
+                <li><a class="nav-link_item" href="#"
+                    class="link_items">Student</a></li>
+                <li><a class="nav-link_item" href="#"
+                    class="link_items">Pricing</a></li>
+                <li>
+                  <div class="nav-select">
+                    <img src="images/globe.svg" alt="globe">
+                    <span class="nav-link_item langSet">En</span>
+                    <img class="arrowUpDown"
+                      src="images/chevron_down.svg"
+                      alt="down arrow">
+                  </div>
 
-            <div class="nav_link">
-              <ul>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Owner </a></li>
-                <li><a href="#">Teacher</a></li>
-                <li><a href="#">Parent</a></li>
-                <li><a href="#">Student</a></li>
-                <li><a href="#">Pricing</a></li>
-
+                  <ul class="nav-select-options hide">
+                    <li class="option">
+                      <span class="nav-link_item">En</span>
+                    </li class="option">
+                    <li class="option">
+                      <span class="nav-link_item">Ur</span>
+                    </li>
+                    <li class="option">
+                      <span class="nav-link_item">Ar</span>
+                    </li>
+                  </ul>
+                </li>
+                <li><button class="nav-btn">
+                    Login
+                  </button></li>
               </ul>
+
+
             </div>
 
-            <div class="nav_lang">
+
+            <!-- <div class="nav_lang">
               <select>
                 <option>Hi, &#xf042;</option>
                 <option>Hi, &#xf043;</option>
@@ -53,12 +83,17 @@
                 <option>Hi, &#xf045;</option>
                 <option>Hi, &#xf046;</option>
               </select>
-            </div>
-            <div class="nav_login-btn">
+            </div> -->
+            <!-- <div class="nav_login-btn">
               <button class="nav-btn">
                 Login
               </button>
-            </div>
+            </div> -->
+          </div>
+          <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
           </div>
         </div>
         <!-- header body -->
@@ -83,9 +118,7 @@
         </div>
 
         <div class="header-img">
-          <!-- <div class="header-main-img">
 
-          </div> -->
           <img class="header_img"
             src="/images/only_girl_img.svg"
             alt="img not found">
@@ -95,7 +128,7 @@
     <!-- main body start -->
     <div class="main">
 
-      <!-- <div class="main-why">
+      <div class="main-why">
         <div class="main-why_heading_para">
           <div class="main-why_heading">
             <h1 class="heading_s">
@@ -117,7 +150,7 @@
 
         <div class="main-why-cards">
           <!-- card 1 -->
-      <!-- <div class="main-why-card-custom align-card card">
+          <div class="main-why-card-custom align-card card">
             <div class="card-custom_icon">
               <img src="./images/customIcon.svg" alt="not
                 found">
@@ -139,9 +172,9 @@
             </div>
 
 
-          </div> -->
-      <!-- card 2 -->
-      <!-- <div class="main-why-card-setup align-card card">
+          </div>
+          <!-- card 2 -->
+          <div class="main-why-card-setup align-card card">
             <div class="card-custom_icon card-setup_color">
               <img src="./images/setup.svg" alt="not
                 found">
@@ -161,9 +194,9 @@
               </p>
             </div>
 
-          </div> -->
-      <!-- card 3 -->
-      <!-- <div class="main-why-card-secure card">
+          </div>
+          <!-- card 3 -->
+          <div class="main-why-card-secure card">
             <div class="card-custom_icon card-secure_color">
               <img src="./images/secure.svg" alt="not
                 found">
@@ -185,7 +218,7 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
       <!-- main role  -->
       <div class="main-role">
         <div class="main-role-heading">
@@ -1009,61 +1042,69 @@
       </div>
       <!-- trusted by  -->
 
-      <div class="main-trusted">
-        <div class="main-trusted-heading">
-          <h1 class="heading_s">
-            Trusted by 5,000+ School Worldwide
-          </h1>
-        </div>
+      <div class="main-trusted-container">
 
-        <div class="main-trusted-para">
-          <p class="para_b">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Egestas orci viverra arcu, purus dictum ac dictumst in
-            quis. Integer venenatis, ut gravida sociis quis donec.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Egestas orci viverra arcu, purus dictum ac dictumst in
-            quis. Integer venenatis, ut gravida.
-          </p>
-        </div>
-
-        <div class="main-trusted-links">
-          <a href="https://google.com/"><img
-              src="images/google.svg"
-              alt="not found"></a>
-          <a href="https://netflix.com/">
-            <img src="images/netflix.svg" alt="not found"></a>
-
-          <a href="https://www.airbnb.com/"> <img src="images/airbnb.svg"
-              alt="not found"></a>
-
-          <a href="https://www.amazon.com/">
-            <img src="images/amazon.svg" alt="not found">
-          </a>
-          <a href="https://www.grab.com/sg/">
-            <img src="images/grab_logo.svg" alt="not found">
-          </a>
-        </div>
-
-        <div class="main-users-info-stat main-trusted-ready">
-
-          <div class="main-users-info trusted-ready-heading-para">
-            <h1 class="role_heading">Ready to get Started?</h1>
-            <p class="para_med">Lorem ipsum dolor sit amet,
-              consectetur adipiscig elit. Egestas orci viverra
-              arcu, purus dictum.</p>
+        <div class="main-trusted">
+          <div class="main-trusted-heading">
+            <h1 class="heading_s">
+              Trusted by 5,000+ School Worldwide
+            </h1>
           </div>
 
-          <div class="trusted-ready-btn">
-            <button class="btn_l">Request a Demo</button>
+          <div class="main-trusted-para">
+            <p class="para_b">
+              Lorem ipsum dolor sit amet, consectetur adipiscing
+              elit.
+              Egestas orci viverra arcu, purus dictum ac dictumst
+              in
+              quis. Integer venenatis, ut gravida sociis quis
+              donec.
+              Lorem ipsum dolor sit amet, consectetur adipiscing
+              elit.
+              Egestas orci viverra arcu, purus dictum ac dictumst
+              in
+              quis. Integer venenatis, ut gravida.
+            </p>
+          </div>
+
+          <div class="main-trusted-links">
+            <a href="https://google.com/">
+              <img
+                src="images/google.svg"
+                alt="not found"></a>
+            <a href="https://netflix.com/">
+              <img src="images/netflix.svg" alt="not found"></a>
+            <a href="https://www.airbnb.com/"> <img
+                src="images/airbnb.svg"
+                alt="not found"></a>
+
+            <a href="https://www.amazon.com/">
+              <img src="images/amazon.svg" alt="not found">
+            </a>
+            <a href="https://www.grab.com/sg/">
+              <img src="images/grab_logo.svg" alt="not found">
+            </a>
+          </div>
+
+          <div class="main-users-info-stat main-trusted-ready">
+
+            <div class="trusted-ready-heading-para">
+              <h1 class="role_heading">Ready to get Started?</h1>
+              <p class="para_med">Lorem ipsum dolor sit amet,
+                consectetur adipiscig elit. Egestas orci viverra
+                arcu, purus dictum.</p>
+            </div>
+
+            <div class="trusted-ready-btn">
+              <button class="btn_l">Request a Demo</button>
+            </div>
           </div>
         </div>
       </div>
+
     </div>
-    <!-- 
     <div class="footer">
       <div class="footer-container">
-
         <div class="footer-logo-content-socail">
           <div class="footer-logo">
             <a href="#"> <img src="/images/logo.svg" alt="not
@@ -1076,22 +1117,33 @@
             </p>
           </div>
           <div class="footer-socail">
-            <div class="socail fb">
-              <img src="images/facebook.svg" alt="not found">
+            <div class="socail">
+              <a class="socail_link"
+                href="https://www.facebook.com/">
+
+                <img src="images/facebook.svg" alt="not found">
+              </a>
             </div>
-            <div class="socail insta">
-              <img src="images/instagram.svg" alt="not found">
+            <div class="socail">
+              <a class="socail_link"
+                href="https://www.instagram.com/">
+                <img src="images/instagram.svg" alt="not found">
+              </a>
             </div>
-            <div class="socail twt">
-              <img src="images/twitter.svg" alt="not found">
+            <div class="socail">
+              <a class="socail_link"
+                href="https://www.twitter.com/">
+                <img src="images/twitter.svg" alt="not found">
+              </a>
             </div>
-            <div class="socail ln">
-              <img src="images/linkedin.svg" alt="not found">
+            <div class="socail">
+              <a class="socail_link"
+                href="https://www.linkedin.com/">
+                <img src="images/linkedin.svg" alt="not found">
+              </a>
             </div>
           </div>
-
         </div>
-
         <div class="footer-info">
           <div class="footer-infos product">
 
@@ -1130,16 +1182,13 @@
                 Street 18, Sector Z DHA Phase
                 3, Lahore, Punjab 54792</li>
             </ul>
-
           </div>
-
         </div>
-
       </div>
-
       <div class="footer-copyright">
         <p class="para_med">&copy; 2022 MyQampus </p>
       </div>
-    </div> -->
+    </div>
+    <script src="main.js"></script>
   </body>
 </html>
