--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="header-img">
 
           <img class="header_img"
-            src="/images/only_girl_img.svg"
+            src="/images/adeel.png"
             alt="img not found">
         </div>
       </div>
@@ -156,7 +156,7 @@
                 found">
             </div>
             <div class="card-custom_h">
-              <h2>
+              <h2 class="card_heading">
                 Customisable to suit your needs
               </h2>
 
@@ -180,7 +180,7 @@
                 found">
             </div>
             <div class="card-custom_h">
-              <h2>
+              <h2 class="card_heading">
                 Tailored onboarding and setup
               </h2>
 
@@ -202,7 +202,7 @@
                 found">
             </div>
             <div class="card-custom_h">
-              <h2>
+              <h2 class="card_heading">
                 Your data stays secure and private
               </h2>
 
