thr first build

--- a/index.html
+++ b/index.html
@@ -101,19 +101,21 @@
 
       <div class="header-content-img">
         <div class="header-content">
-          <div class="header_heading">
-            <h1 class="heading">Find the best solution for your
-              education</h1>
-          </div>
-          <div class="header_para">
-            <p class="para_s">Lorem ipsum dolor sit amet,
-              consectetur
-              adipiscing
-              elit. Orci pharetra id odio orci, vitae ut eu sed
-              integer.</p>
-          </div>
-          <div class="header_btn">
-            <button class="btn">get started</button>
+          <div class="header-content-align">
+            <div class="header_heading">
+              <h1 class="heading">Find the best solution for your
+                education</h1>
+            </div>
+            <div class="header_para">
+              <p class="para_s">Lorem ipsum dolor sit amet,
+                consectetur
+                adipiscing
+                elit. Orci pharetra id odio orci, vitae ut eu sed
+                integer.</p>
+            </div>
+            <div class="header_btn">
+              <button class="btn">get started</button>
+            </div>
           </div>
         </div>
 
@@ -240,7 +242,8 @@
                 <!-- own -->
                 <div class="role-own">
                   <div class="role-own_icon active_i">
-                    <img src="images/rule_own.svg" alt="not
+                    <img class="role-own_icon_img" src="images/rule_own.svg"
+                      alt="not
                       found">
                     <!-- <svg src="images/rule_own.svg"
                                             style="margin-top: 10px;"></svg> -->
@@ -386,8 +389,6 @@
             </div>
           </div>
         </div>
-
-
         <!-- lesson planner -->
 
         <div class="main-role-manage">
@@ -1018,21 +1019,21 @@
 
           <div class="main-users-stat">
             <div class="users-stat">
-              <h1 class="users-stat-num inst_col">
+              <h1 class="users-stat_num inst_col">
                 250
               </h1>
               <p class="para_bb">Institutes</p>
             </div>
 
             <div class="users-stat">
-              <h1 class="users-stat-num stu_col">
+              <h1 class="users-stat_num stu_col">
                 70<span>k</span>
               </h1>
               <p class="para_bb">Students</p>
             </div>
 
             <div class="users-stat">
-              <h1 class="users-stat-num ctry_col">
+              <h1 class="users-stat_num ctry_col">
                 15
               </h1>
               <p class="para_bb">Countries</p>
@@ -1121,74 +1122,175 @@
               <a class="socail_link"
                 href="https://www.facebook.com/">
 
-                <img src="images/facebook.svg" alt="not found">
-              </a>
-            </div>
-            <div class="socail">
-              <a class="socail_link"
-                href="https://www.instagram.com/">
-                <img src="images/instagram.svg" alt="not found">
-              </a>
-            </div>
-            <div class="socail">
-              <a class="socail_link"
-                href="https://www.twitter.com/">
-                <img src="images/twitter.svg" alt="not found">
-              </a>
-            </div>
-            <div class="socail">
-              <a class="socail_link"
-                href="https://www.linkedin.com/">
-                <img src="images/linkedin.svg" alt="not found">
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="footer-info">
-          <div class="footer-infos product">
+                <svg width="18" height="18" viewBox="0 0 18 18"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path class="icon_color" d="M13.5
+                    1.5H11.25C10.2554 1.5
+                    9.30161
+                    1.89509 8.59835
+                    2.59835C7.89509 3.30161 7.5 4.25544 7.5
+                    5.25V7.5H5.25V10.5H7.5V16.5H10.5V10.5H12.75L13.5
+                    7.5H10.5V5.25C10.5 5.05109 10.579
+                    4.86032 10.7197
+                    4.71967C10.8603 4.57902 11.0511 4.5
+                    11.25 4.5H13.5V1.5Z"
+                    fill="white" />
+                  </svg>
 
-            <ul class="footer-infos_ul">
-              <li><h4 class="footer-infos_heading">PRODUCTS</h4></li>
-              <li>School Owner</li>
-              <li>Teacher</li>
-              <li>Parents</li>
-              <li>Students</li>
-            </ul>
-          </div>
-          <div class="footer-infos company">
-            <ul class="footer-infos_ul">
-              <li> <h4 class="footer-infos_heading">COMPANY</h4></li>
-              <li>About Us</li>
-              <li>Blog</li>
-              <li>Contact Us</li>
-              <li>Testimonial</li>
-            </ul>
-          </div>
-          <div class="footer-infos others">
-            <ul class="footer-infos_ul">
-              <li> <h4 class="footer-infos_heading">OTHERS</h4></li>
-              <li>Terms of Service</li>
-              <li>Privacy Policy</li>
-              <li>FAQ</li>
-            </ul>
+                </a>
+              </div>
+              <div class="socail">
+                <a class="socail_link"
+                  href="https://www.instagram.com/">
+                  <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path class="icon_color" d="M12.75 1.5H5.25C3.17893 1.5 1.5
+                      3.17893 1.5
+                      5.25V12.75C1.5 14.8211 3.17893 16.5 5.25
+                      16.5H12.75C14.8211 16.5 16.5 14.8211 16.5 12.75V5.25C16.5
+                      3.17893 14.8211 1.5 12.75 1.5Z" stroke="white"
+                      stroke-width="2" stroke-linecap="round"
+                      stroke-linejoin="round" />
+                      <path class="icon_color" d="M12 8.52773C12.0926 9.15191
+                        11.986 9.78939
+                        11.6953 10.3495C11.4047 10.9096 10.9449 11.3638 10.3812
+                        11.6475C9.8176 11.9312 9.17886 12.0299 8.55586
+                        11.9297C7.93287 11.8294 7.35734 11.5353 6.91115
+                        11.0891C6.46496 10.6429 6.17082 10.0674 6.07058
+                        9.44439C5.97033 8.82139 6.06907 8.18265 6.35277
+                        7.61901C6.63647 7.05537 7.09066 6.59553 7.65076
+                        6.30491C8.21086 6.01428 8.84834 5.90767 9.47252
+                        6.00023C10.1092 6.09464 10.6987 6.39132 11.1538
+                        6.84646C11.6089 7.30159 11.9056 7.89103 12 8.52773Z"
+                        stroke="white" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                        <path class="icon_color" d="M13.125 4.875H13.134"
+                          stroke="white"
+                          stroke-width="2" stroke-linecap="round"
+                          stroke-linejoin="round" />
+                        </svg>
+                      </a>
+                    </div>
+                    <div class="socail">
+                      <a class="socail_link"
+                        href="https://www.twitter.com/">
+                        <svg width="18" height="18"
+                          viewBox="0 0 18 18"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path class="icon_color"
+                            d="M17.25
+                            2.25022C16.5318
+                            2.75683 15.7366 3.1443
+                            14.895 3.39772C14.4433
+                            2.87835 13.843 2.51024
+                            13.1753 2.34316C12.5076
+                            2.17609 11.8046 2.21811
+                            11.1616 2.46356C10.5185
+                            2.709 9.96633 3.14602
+                            9.57974 3.71551C9.19314
+                            4.28499 8.99077 4.95947
+                            9
+                            5.64772V6.39772C7.68198
+                            6.43189 6.37596 6.13958
+                            5.19826 5.5468C4.02056
+                            4.95403 3.00774 4.07919
+                            2.25
+                            3.00022C2.25 3.00022
+                            -0.75 9.75022 6
+                            12.7502C4.4554
+                            13.7987 2.61537 14.3244
+                            0.75 14.2502C7.5 18.0002
+                            15.75 14.2502 15.75
+                            5.62522C15.7493 5.41631
+                            15.7292
+                            5.20791 15.69
+                            5.00272C16.4555 4.24784
+                            16.9956
+                            3.29475 17.25 2.25022Z"
+                            fill="white" />
+                          </svg>
+                        </a>
+                      </div>
+                      <div class="socail">
+                        <a class="socail_link"
+                          href="https://www.linkedin.com/">
+                          <svg width="18" height="18" viewBox="0 0 18 18"
+                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="icon_color" d="M3.73719 5.39772C4.64349
+                              5.39772 5.37819
+                              4.66302 5.37819 3.75672C5.37819 2.85042 4.64349
+                              2.11572 3.73719 2.11572C2.83089 2.11572 2.09619
+                              2.85042 2.09619 3.75672C2.09619 4.66302 2.83089
+                              5.39772 3.73719 5.39772Z" fill="white" />
+                              <path class="icon_color" d="M6.92779
+                                6.64102V15.7453H9.75454V11.243C9.75454 10.055
+                                9.97804 8.90452 11.451 8.90452C12.9038 8.90452
+                                12.9218 10.2628 12.9218
+                                11.318V15.746H15.75V10.7533C15.75 8.30077 15.222
+                                6.41602 12.3555 6.41602C10.9793 6.41602 10.0568
+                                7.17127 9.67954
+                                7.88602H9.64129V6.64102H6.92779ZM2.32129
+                                6.64102H5.15254V15.7453H2.32129V6.64102Z"
+                                fill="white" />
+                              </svg>
 
-          </div>
-          <div class="footer-infos contact">
-            <ul class="footer-infos_ul">
-              <li> <h4 class="footer-infos_heading">CONTACT</h4></li>
-              <li>contact@myqampus.com</li>
-              <li>+92 42 37192135</li>
-              <li>Second Floor,Plaza 35,
-                Street 18, Sector Z DHA Phase
-                3, Lahore, Punjab 54792</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="footer-copyright">
-        <p class="para_med">&copy; 2022 MyQampus </p>
-      </div>
-    </div>
-    <script src="main.js"></script>
-  </body>
-</html>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="footer-info">
+
+                        <div class="footer-infos product">
+                          <ul class="footer-infos_ul">
+                            <li><h4
+                                class="footer-infos_heading">PRODUCTS</h4></li>
+                            <li>School Owner</li>
+                            <li>Teacher</li>
+                            <li>Parents</li>
+                            <li>Students</li>
+                          </ul>
+                        </div>
+                        <div class="footer-infos company">
+                          <ul class="footer-infos_ul">
+                            <li> <h4
+                                class="footer-infos_heading">COMPANY</h4></li>
+                            <li>About Us</li>
+                            <li>Blog</li>
+                            <li>Contact Us</li>
+                            <li>Testimonial</li>
+                          </ul>
+                        </div>
+                        <div class="footer-infos others">
+                          <ul class="footer-infos_ul">
+                            <li> <h4
+                                class="footer-infos_heading">OTHERS</h4></li>
+                            <li>Terms of Service</li>
+                            <li>Privacy Policy</li>
+                            <li>FAQ</li>
+                          </ul>
+
+                        </div>
+                        <div class="footer-infos contact">
+                          <ul class="footer-infos_ul">
+                            <li> <h4
+                                class="footer-infos_heading">CONTACT</h4></li>
+                            <li>contact@myqampus.com</li>
+                            <li>+92 42 37192135</li>
+                            <li>Second Floor,Plaza 35,
+                              Street 18, Sector Z DHA
+                              Phase
+                              3, Lahore, Punjab 54792</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="footer-copyright">
+                      <p class="para_med">&copy; 2022 MyQampus
+                      </p>
+                    </div>
+                  </div>
+                  <script src="main.js"></script>
+                </body>
+              </html>
